--- a/index.html
+++ b/index.html
@@ -312,16 +312,7 @@
         </div>
     </section>
 
-    <!-- SERVICES -->
-    <section id="servicios" class="py-32 px-6 gold-bg border-y gold-border">
-        <div class="max-w-7xl mx-auto">
-            <div class="text-center mb-24 space-y-4">
-                <span class="gold-accent font-bold tracking-[0.5em] text-[9px] uppercase">Nuestra Maestría</span>
-                <h2 class="text-5xl md:text-7xl font-black tracking-tighter text-black">Servicios Selectos</h2>
-            </div>
-            <div id="services-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"></div>
-        </div>
-    </section>
+
 
     <!-- PRODUCTS -->
     <section id="productos" class="py-32 px-6">
@@ -335,6 +326,16 @@
         </div>
     </section>
 
+<!-- SERVICES -->
+    <section id="servicios" class="py-32 px-6 gold-bg border-y gold-border">
+        <div class="max-w-7xl mx-auto">
+            <div class="text-center mb-24 space-y-4">
+                <span class="gold-accent font-bold tracking-[0.5em] text-[9px] uppercase">Nuestra Maestría</span>
+                <h2 class="text-5xl md:text-7xl font-black tracking-tighter text-black">Servicios</h2>
+            </div>
+            <div id="services-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"></div>
+        </div>
+    </section>
     <!-- REVIEWS -->
     <section id="resenas" class="py-32 px-6 gold-bg border-y gold-border">
         <div class="max-w-7xl mx-auto">
@@ -407,7 +408,7 @@
                 <p class="text-2xl text-muted max-w-xl mx-auto font-medium leading-relaxed">Agenda tu cupo en segundos y recibe confirmación inmediata.</p>
             </div>
             <div class="flex flex-col sm:flex-row items-center justify-center gap-6">
-                <a href="https:wa.me/+573106147688" target="_blank" class="btn-black w-full sm:w-auto px-16 py-8 rounded-full flex items-center justify-center gap-5 text-sm font-black uppercase tracking-[0.1em]">
+                <a href="https://wa.me/573215959219" target="_blank" class="btn-black w-full sm:w-auto px-16 py-8 rounded-full flex items-center justify-center gap-5 text-sm font-black uppercase tracking-[0.1em]">
                     AGENDAR POR WHATSAPP <i data-lucide="message-circle" class="w-6 h-6"></i>
                 </a>
             </div>
@@ -510,7 +511,7 @@
                             <h3 class="text-base font-black uppercase tracking-tighter">${p.name}</h3>
                             <div class="flex items-center justify-between">
                                 <span class="text-2xl font-black text-black">${p.price}</span>
-                                <a href="https://wa.me/yournumber?text=Hola!%20Quiero%20comprar%20${encodeURIComponent(p.name)}%20-%20${p.price}" target="_blank" class="bg-black text-white px-5 py-2 rounded-full font-black text-[8px] uppercase tracking-[0.2em] hover:bg-emerald-600 transition-all inline-block">
+                                <a href="https://wa.me/573215959219?text=Hola,%20me%20interesa%20un%20producto" target="_blank" class="bg-black text-white px-5 py-2 rounded-full font-black text-[8px] uppercase tracking-[0.2em] hover:bg-emerald-600 transition-all inline-block">
                                     Comprar
                                 </a>
                             </div>
