--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
                 </p>
                 <div class="flex flex-col sm:flex-row items-center gap-6 justify-center lg:justify-start">
                     <button onclick="scrollToId('reservar')" class="btn-black w-full sm:w-auto px-12 py-6 rounded-full flex items-center justify-center gap-4 text-xs font-bold uppercase tracking-[0.2em]">
-                        RESERVAR CITA <i data-lucide="calendar" class="w-4 h-4"></i>
+                        RESERVAR CUPO <i data-lucide="calendar" class="w-4 h-4"></i>
                     </button>
                     <button onclick="scrollToId('servicios')" class="w-full sm:w-auto px-12 py-6 rounded-full flex items-center justify-center gap-4 border border-black/10 text-xs font-bold uppercase tracking-[0.2em] hover:bg-gray-50 transition-all">
-                        EXPLORAR SERVICIOS <i data-lucide="arrow-right" class="w-4 h-4"></i>
+                        SERVICIOS <i data-lucide="arrow-right" class="w-4 h-4"></i>
                     </button>
                 </div>
             </div>
